--- a/src/components/Login.module.scss
+++ b/src/components/Login.module.scss
@@ -1,25 +1,66 @@
-.logo {
-  // put the logo in the top left corner
-position: absolute;
-  left: 50%;
-  top: 10%;
-  transform: translate(-50%, 0); // Shift the logo back to the left by half it
-      width: 300px;
-    height: 300px;
-    object-fit: scale-down;
-}
-
-.body { // Or another selector that refers to your entire page
-  height: 100vh; // or any specific height based on your requirement
+.container { 
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: 100% auto;
-  overflow: hidden;
+  color: white;
+  position: relative;
+  justify-content: left;
 }
 
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow-x: hidden;
+.group {
+  display: flex;
+  align-items: center;
+  margin-left: 10em;
+  position: relative;
+  top: -10vh;
+  right: -10vw
+}
+
+.group img {
+    width: 400px;
+    object-fit: scale-down;
+}
+
+.container::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: url("/src/assets/images/star\ background\ white\ thin.png") no-repeat center bottom / cover, url("/src/assets/images/LoginAlternativeBackgroundStarlessNoHills.png") no-repeat center bottom / cover;
+  z-index: 0-1;
+}
+
+
+
+@media (max-width: 600px) {
+  .group {
+    flex-direction:column-reverse;
+    align-items: center; /* Align items to the center for mobile screens */
+    padding-top: 5em;
+    margin: 0;
+    top: 0;
+    right: 0;
+  }
+  .container {
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+  }
+
+  .form {
+  max-height: 40vh;
+  overflow: auto;
+  padding-top: 5em;
+}
+  .loginIcon {
+    max-height: 40vh; /* adjust based on your preference */
+  }
+
+  .group img {
+    width: 300px;
+    object-fit: scale-down;
+}
+
 }
