--- a/src/components/LoginForm.module.scss
+++ b/src/components/LoginForm.module.scss
@@ -6,6 +6,7 @@
     font-size: calc(15px + 0.390625vw);
     width: 100%;
     text-align: left;
+    color: black;
 }
 
 .loginForm {
@@ -77,6 +78,7 @@
     font-family: 'Poppins', sans-serif;
     width: 100%;
     text-align: left;
+    color: black;
 }
 
 .email,
