--- a/src/components/SignupForm.module.scss
+++ b/src/components/SignupForm.module.scss
@@ -4,8 +4,10 @@
 .header {
     font-family: 'Poppins', sans-serif;
     font-size: calc(15px + 0.390625vw);
-    width: 55%;
+    width: 50%;
     text-align: left;
+    color: white;
+    margin: 0;
 }
 
 .signupForm {
@@ -13,12 +15,12 @@
   justify-content: center;
   align-items: center;
   text-align: left;
-  min-height: 100vh;
   flex-direction: column;
+  width: 100vw;
 }
 
 .input {
-  width: 55%; // Stretch across the screen
+  width: 50%; // Stretch across the screen
   height: 3em;
   z-index: 2;
   padding: 10px;
@@ -36,7 +38,7 @@ font-family: 'Poppins', sans-serif;
     font-family: 'Poppins', sans-serif;
     height: 3em;
     font-size: calc(10px + 0.390625vw);
-  width: 55%; // Stretch across the screen
+  width: 50%; // Stretch across the screen
   box-sizing: border-box;
   padding: 10px;
   z-index: 2;
@@ -69,15 +71,16 @@ font-family: 'Poppins', sans-serif;
 .signupText {
     font-size: calc(10px + 0.390625vw);
     font-family: 'Poppins', sans-serif;
-    width: 55%;
+    width: 50%;
     text-align: left;
+    color: white;
 }
 
 .email,
   input p {
     font-size: calc(10px + 0.390625vw);
     font-family: 'Poppins', sans-serif;
-    width: 55%;
+    width: 50%;
   }
 
 .emailInput {
@@ -89,13 +92,14 @@ font-family: 'Poppins', sans-serif;
     background: rgb(238, 238, 238, 0.8)
 }
 .editContainer {
-  width: 55%
+  width: 50%
 }
 
 .text {
       font-size: calc(15px + 0.390625vw);
     font-family: 'Poppins', sans-serif;
-    width: 55%;
+    width: 50%;
     text-align: left;
+    color: white;
 }
 
