--- a/src/components/LoginForm.module.scss
+++ b/src/components/LoginForm.module.scss
@@ -83,7 +83,7 @@
 }
 
 .email,
-  p {
+  .email p {
     font-size: calc(10px + 0.390625vw);
     font-family: 'Poppins', sans-serif;
     width: 100%;
