--- a/src/components/SignupForm.module.scss
+++ b/src/components/SignupForm.module.scss
@@ -6,7 +6,7 @@
     font-size: calc(15px + 0.390625vw);
     width: 50%;
     text-align: left;
-    color: white;
+    color: whitesmoke;
     margin: 0;
 }
 
@@ -77,7 +77,7 @@ font-family: 'Poppins', sans-serif;
 }
 
 .email,
-  input p {
+  .input p {
     font-size: calc(10px + 0.390625vw);
     font-family: 'Poppins', sans-serif;
     width: 50%;
