--- a/src/components/Filter.module.scss
+++ b/src/components/Filter.module.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
+
 .defaultTagList {
   padding-left: 1em;
   padding-top: 0.5em;
@@ -16,6 +18,18 @@
 }
 
 .tabContainer {
+  width: 35%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: lightgrey;
+  border-radius: 8px;
+  padding: 3px;
+  position: relative;
+  text-align: center;
+}
+
+.tabsContent {
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -23,23 +37,24 @@
 }
 
 .tabSlider {
-  background: white;
-  position: absolute;
+ position: absolute;
+ align-items: center;
+  width: 49%;
+  height: 85%;
+  background-color: white;
+  border-radius: 8px;
+  transition: transform 0.2s ease-in-out;
+  z-index: 0; // Change this to 0, so it sits below the buttons
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);}
+.filterTab {
   width: 50%;
-  height: 100%;
-  z-index: 0;
-  transition: all 0.3s ease-in-out;
+  background: transparent;
+  border: none;
+  font-size: 16px;
+  z-index: 1;
+  font-family: 'Poppins', sans-serif;
+  font-size: calc(6px + 0.390625vw);
 }
-
-.tagsTab {
-  left: 0;
-}
-
-.dataTab {
-  left: 50%;
-}
-
-
 
 .filterContainer {
   background: #f0f0f08a;
@@ -47,5 +62,7 @@
   padding: 10px;
   margin: 1em;
   position: relative;
+  border-radius: 15px;
+  box-shadow: 0px 2px 5px rgba(219, 219, 219, 0.795);;
 }
 
