--- a/src/components/FanficCard.module.scss
+++ b/src/components/FanficCard.module.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600;700&display=swap');
 
 .fanficCard {
   position: relative;
@@ -36,8 +35,6 @@
   align-items: center;
   background-color: white;
   font-size: calc(6px + 0.390625vw);
- 
-
 }
 
 .urlLink {
@@ -50,6 +47,7 @@
 
 .fanficHeader h2 {
   margin: 0;
+  font-weight: 300;
 }
 
 .fanficBody p {
